polybot-k8s/Polybot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot
  namespace: dev
spec:
  selector:
    app: polybot
  ports:
  - protocol: TCP
    port: 443
    targetPort: 5000
  type: NodePort
